--- a/app/src/main/res/layout/activity_add_restriction.xml
+++ b/app/src/main/res/layout/activity_add_restriction.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <EditText
-        android:id="@+id/restriction_name"
+        android:id="@+id/input_restriction_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -21,10 +21,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/lstIngredients"
+        android:layout_width="374dp"
+        android:layout_height="448dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_weight="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/input_restriction_name"
+        app:layout_constraintVertical_bias="0.0" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_restriction_confirm"
         android:layout_width="56dp"
-        android:layout_height="56dp"
+        android:layout_height="59dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -32,8 +46,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:clickable="true"
+        android:onClick="save_restriction"
         android:focusable="true"
-
         android:src="@drawable/ic_check_black_24dp"
         app:backgroundTint="@color/colorPrimary"
         app:elevation="10dp"
@@ -41,20 +55,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.981"
+        app:layout_constraintTop_toBottomOf="@+id/lstIngredients"
+        app:layout_constraintVertical_bias="1.0"
         app:maxImageSize="@android:dimen/app_icon_size" />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/lstIngredients"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/restriction_name"
-        app:layout_constraintVertical_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
