--- a/app/src/main/res/layout/activity_restrictions.xml
+++ b/app/src/main/res/layout/activity_restrictions.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".controller.RestrictionActivity">
+    tools:context=".activities.RestrictionActivity">
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_restriction"
