Products showing and filtered as allowed and not allowed according to Restrictions

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#3a8603</color>
     <color name="headerColor">#ffffff</color>
     <color name="tabIndicatorColor">#ffff8d</color>
+    <color name="notAllowedProduct">#be9c9a</color>
 
     <color name="List_color">#4b4b4b</color>
 </resources>
